# pqc-java

./: .gitignore  LICENSE  fPIC.md
docs/superpowers/plans/: 2026-03-27-shim-full-coverage.md
java/: pom.xml
java/src/main/java/pqc/: CrystalsException.java  CrystalsLib.java  DilithiumSig.java  EcKEM.java  EcSig.java  KyberKEM.java  McElieceKEM.java  OqsKEM.java  OqsSig.java  SlhDsaSig.java  package-info.java
java/src/test/java/pqc/: DilithiumSigTest.java  EcKEMTest.java  EcSigTest.java  KyberKEMTest.java  McElieceKEMTest.java  OqsKEMTest.java  OqsSigTest.java  SlhDsaTest.java
shim/: CMakeLists.txt
shim/include/: crystals_ffi.h
shim/src/: crystals_ffi.cpp
shim/test/: test_shim.c
